--- a/jufek-trendy/public/css/styles.css
+++ b/jufek-trendy/public/css/styles.css
@@ -6095,7 +6095,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #1abc9c !important;
+  background-color: #62a9af !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
