--- a/jufek-trendy/public/css/styles.css
+++ b/jufek-trendy/public/css/styles.css
@@ -2471,8 +2471,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #1abc9c;
-  border-color: #1abc9c;
+  background-color: #7b5578;
+  border-color: #7b5578;
 }
 .btn-primary:hover {
   color: #fff;
