--- a/jufek-trendy/public/css/custom-styles.css
+++ b/jufek-trendy/public/css/custom-styles.css
@@ -1,3 +1,13 @@
 .padding-20{
     padding: 20px;
 }
+
+.holder {
+    display: inline;
+  }
+
+.holder img {
+    max-height: 200px;
+    max-width: 200px;
+    object-fit: cover;
+}
