--- a/jufek-trendy/public/css/custom-styles.css
+++ b/jufek-trendy/public/css/custom-styles.css
@@ -7,7 +7,17 @@
   }
 
 .holder img {
-    max-height: 200px;
-    max-width: 200px;
+    height: 200px;
+    width: 200px;
+    object-fit: cover;
+}
+
+.show-holder {
+    display: inline;
+  }
+
+.show-holder img {
+    height: 400px;
+    width: 400px;
     object-fit: cover;
 }
